fixes css on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -47,3 +47,10 @@ a:active {
   opacity: 1;
   color: white;
 }
+
+.header-text > p, .footer > p {
+  opacity: 0.2;
+}
+.footer > p, .skills > p {
+  text-align: center;
+}
