--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -3,6 +3,12 @@
 */
 
 /* ELEMENTS */
+h1 {
+  font-size: 60px;
+}
+p, a {
+  font-size: 40px;
+}
 
 /* CLASSES */
 .wrapper {
@@ -13,34 +19,21 @@
   height: min-content;
   min-height: 100vh;
   background-image: linear-gradient(45deg, #f8b133, #0651d8);
-  /* border: 7px dotted blue; */
 }
-/* .wrapper > div {
-  border: 7px dotted green;
-} */
 .main {
   display: grid;
   grid-template-rows: repeat(3, min-content);
   grid-row-gap: 100px;
 }
-/* .main > div {
-  border: 7px dotted red;
-} */
 .header {
   display: grid;
   grid-template-rows: repeat(2, min-content);
   grid-row-gap: 30px;
 }
-/* .header > div {
-  border: 7px dotted purple;
-} */
 .header-text {
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-gap: 10px;
-}
-.header-text > p, .footer > p {
-  opacity: 0.3;
 }
 .header-links {
   display: grid;
@@ -60,7 +53,7 @@
   margin: auto;
 }
 .icons > a {
-  font-size: 50px;
+  font-size: 100px;
 }
 .icons > a:link {
   text-decoration: none;
@@ -73,45 +66,71 @@
   grid-gap: 100px;
   /* border: 7px red dotted; */
 }
-/* .items-layout > div {
-  border: 7px blue dotted;
-} */
-/* .items-layout > div {
-  display: grid;
-  justify-content: center;
-} */
 .item {
   display: grid;
-  grid-template-rows: min-content min-content;
-  grid-gap: 10px;
+  grid-template-rows: min-content auto;
+  grid-gap: 30px;
   width: 100%;
   height: min-content;
   background-color: white;
   border-radius: 50px;
   padding: 30px;
 }
-/* .item > div {
-  border: 7px green dotted;
-} */
 .photo > img {
   object-fit: cover;
   width: 100%;
+  /* height: 150px; */
   max-height: 100%;
-  border-radius: 30px;
+  border-radius: 40px;
 }
 .item-body {
   display: grid;
-  grid-template-rows: min-content min-content min-content;
+  grid-template-rows: auto min-content min-content;
   grid-gap: 30px;
 }
-.item-body > * {
+.item-description {
+  display: grid;
+  grid-template-rows: min-content min-content;
+  grid-gap: 10px;
+}
+.item-description > p {
   color: black;
 }
-.item-body > div > * {
+.item-tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  /* border: 3px blue dotted; */
+  margin-top: -20px; /* offset margin of top-most row */
+}
+.item-tags > p {
+  text-decoration: none;
+  padding: 10px 20px 10px 20px;
+  margin: 20px 20px 0px 0px;
+  background-color: black;
+  border-radius: 25px;
+  /* font-size: 40px; */
+  text-align: center;
+  opacity: 0.2;
+}
+/* footer text in item */
+.item-links > p {
+  color: black;
+  font-size: 30px;
+  opacity: 0.2;
+}
+/* icons in each item */
+.item-links > a {
   color: black;
   text-decoration: none;
-  opacity: 0.3;
-}
-.item-body > div > a {
   font-size: 100px;
+  opacity: 0.2;
+}
+.item-links > a:visited {
+  color: black;
+}
+.item-links > a:hover {
+  color: black;
+  opacity: 1;
 }
